The google auth route now returns ok if token saved is valid, and the route otherwise, and uses JWT for callback
